fix: don't create dns record from tls hosts

--- a/apps/external-dns/deployment.yaml
+++ b/apps/external-dns/deployment.yaml
@@ -29,6 +29,7 @@ spec:
             - --source=ingress
             - --domain-filter=k8s.pupy.cloud
             - --domain-filter=pupy.cloud
+            - --ignore-ingress-tls-spec
           envFrom:
             - secretRef:
                 name: tsig-creds
