fix: decrypt flux-system

--- a/clusters/lab/flux-system/gotk-sync.yaml
+++ b/clusters/lab/flux-system/gotk-sync.yaml
@@ -19,9 +19,13 @@ metadata:
   name: flux-system
   namespace: flux-system
 spec:
-  interval: 10m0s
+  interval: 1m
   path: ./clusters/lab
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
