--- a/clusters/lab/flux-system/discord-alerts.yaml
+++ b/clusters/lab/flux-system/discord-alerts.yaml
@@ -1,8 +1,7 @@
----
 apiVersion: notification.toolkit.fluxcd.io/v1beta3
 kind: Alert
 metadata:
-  name: discord-alerts
+  name: discord-alerts-private
   namespace: flux-system
 spec:
   eventSeverity: info
@@ -12,4 +11,19 @@ spec:
   - kind: Kustomization
     name: '*'
   providerRef:
-    name: discord
+    name: discord-private
+---
+apiVersion: notification.toolkit.fluxcd.io/v1beta3
+kind: Alert
+metadata:
+  name: discord-alerts-public
+  namespace: flux-system
+spec:
+  eventSeverity: info
+  eventSources:
+  - kind: GitRepository
+    name: '*'
+  - kind: Kustomization
+    name: '*'
+  providerRef:
+    name: discord-public
