--- a/clusters/lab/flux-system/discord-webhook.yaml
+++ b/clusters/lab/flux-system/discord-webhook.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: discord-webhook
+    name: discord-webhook-private
     namespace: flux-system
 stringData:
     address: ENC[AES256_GCM,data:1etDRkPcGwv4d2mAbt2cS9CxybIwABncVFO7meM176Fu7hTydvWW1riGZAdobQEodfeVDoYrQ/+r7snvv0QPa909dvoC9kbiyqe85z3gFayQHawHceWctwOtn+Ul9ehVcp1aOP54c7aIHeb42ktMzJZNQ5oSO7JFdBGIn54ZADpw6XVq24Kp3DSexvYSTQzld6PUc0vQSSL5km8iFu8=,iv:tsIGqlKu11FZWiNlrwr0c3t764MAshRYw57/uS0jCtE=,tag:1xCcpgZrgzTeOSVpQyZjww==,type:str]
@@ -20,8 +20,36 @@ sops:
             TGp2THp6d25oWFdwSkZVdXNrdHI0aFUKzvB9brwQlBBKQW0A4Cd/sYASD9mon4o9
             u3CAECdVEADkVnPVKxWpzflC1OY+5BuDCQI/u1r/d6oO0q6gwaXvug==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-06-21T23:25:33Z"
-    mac: ENC[AES256_GCM,data:Qe4Zoa4MogSWRcFOoLOn9v6bbBaUfXw/iot5MpAPv2BWVb7N+Zf5YMc7DG5fhZloGr/mcQE3A0vEc6FMibxLWJmyOlB/4E+tBMi5ZHvQOdnkaSVkhzH9gkuChE7/39RorOWUt/eQ9n+/Mr8GpCCeJatCSBlpcZzOsFkpy7m5DqQ=,iv:b0EW4pbk64De5WYeyYVQaPb9I2mVq69YxYJKJTEhpXg=,tag:zksHwLiCib1fQBcK48Ko+g==,type:str]
+    lastmodified: "2024-06-22T00:57:30Z"
+    mac: ENC[AES256_GCM,data:5SLdEo1IXLpLdLIqnWuUMZMWoX7J6D0zn9QIUGviIvadPuHQbp9zzNswCTvz9u/9YZdwThseazap7dPAQcL94Z9dOtayNKzngqdBSG8aPlotMVgXcSOqB7O+TyT0SxblWjg/z6742X7dVNjeU/ZR42W0fBP9PBCh6Hwn1GXdEgc=,iv:dxUL7B+bTNIIVhBbwMvujXhS0Nrq3jIR3mukjHM1N1Y=,tag:xiZH7Xd53167WoO6b3RjXg==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.8.1
+---
+apiVersion: v1
+kind: Secret
+metadata:
+    name: discord-webhook-public
+    namespace: flux-system
+stringData:
+    address: ENC[AES256_GCM,data:dEpTpFBNqHLRhTQMqP84emZ7enXp8/PXrDIKuN584xMrLxmD0DERruF65cntwnOcJu4go+8xj1sYrtZn2BusWuSUzeIEAiwXgKP3thgWHVxZV3BgusQhiB0IDMEZ0k3xLviZ+lMr7aDQPFN5/EqOxosC240XiOuAMlsivsuxytWLEYw9m0T13K4zaNJnhpBGhSLA3NmeGOFR+xFE/Q==,iv:iNRkK0bKsDhGixrVtsYZlAQ0pmCVs9oCtFA+e7/BtOw=,tag:2D7Au+EbqfwBXnRDxeWrgg==,type:str]
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1yaeq49xp06dguajrxg582knly6ewkarszs6mmq22tq8c0de339aqc6rqzd
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwMEFUWjVWZFJoWklCblVh
+            Q21wdGJCTUI1Ym5VODNCM1drd2VEM0pxOVJjCkFHc0hIdXYzZE4yWlQ2TzFpUTkz
+            cW53bGtmQ1QwVHJvNm5haGlIV294eW8KLS0tIDM4WWp2N1ZTWmtLSVNEUXpRZHVT
+            TGp2THp6d25oWFdwSkZVdXNrdHI0aFUKzvB9brwQlBBKQW0A4Cd/sYASD9mon4o9
+            u3CAECdVEADkVnPVKxWpzflC1OY+5BuDCQI/u1r/d6oO0q6gwaXvug==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-06-22T00:57:30Z"
+    mac: ENC[AES256_GCM,data:5SLdEo1IXLpLdLIqnWuUMZMWoX7J6D0zn9QIUGviIvadPuHQbp9zzNswCTvz9u/9YZdwThseazap7dPAQcL94Z9dOtayNKzngqdBSG8aPlotMVgXcSOqB7O+TyT0SxblWjg/z6742X7dVNjeU/ZR42W0fBP9PBCh6Hwn1GXdEgc=,iv:dxUL7B+bTNIIVhBbwMvujXhS0Nrq3jIR3mukjHM1N1Y=,tag:xiZH7Xd53167WoO6b3RjXg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
