--- a/clusters/lab/flux-system/gitlab-provider.yaml
+++ b/clusters/lab/flux-system/gitlab-provider.yaml
@@ -15,6 +15,7 @@ metadata:
   name: gitlab-status
   namespace: flux-system
 spec:
+  eventSeverity: info
   providerRef:
     name: gitlab-provider
   eventSources:
