--- a/apps/media/jellyfin/service.yaml
+++ b/apps/media/jellyfin/service.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: jellyfin-svc
-  namespace: media
+  namespace: mediaaaaaa
 spec:
   selector:
     app: jellyfin
