fix: radarr port

--- a/apps/media/radarr/kustomization.yaml
+++ b/apps/media/radarr/kustomization.yaml
@@ -17,6 +17,13 @@ patches:
         path: /spec/rules/0/host
         value: radarr-kube.pupy.cloud
 
+  - target:
+      kind: Deployment
+    patch: |-
+      - op: replace
+        path: /spec/template/spec/containers/0/ports/0/containerPort
+        value: 7878
+
 images:
   - name: scratch
     newName: lscr.io/linuxserver/radarr
