--- a/apps/gitlab-runner/release.yaml
+++ b/apps/gitlab-runner/release.yaml
@@ -33,3 +33,4 @@ spec:
         [[runners]]
         [runners.kubernetes]
         image = "ubuntu:20.04"
+        volumes = ["/var/run/docker.sock:/var/run/docker.sock"]
